Fix list margin too much issue.

--- a/assets/themes/the-program/css/style.css
+++ b/assets/themes/the-program/css/style.css
@@ -452,6 +452,7 @@ dl {
   margin-top: 0;
   margin-bottom: 1.625em;
 }
+li p { margin-bottom: 0; }
 small,
 .small,
 aside {
